--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,14 @@ services:
       - ${SERVICE_PORT}:${SERVICE_PORT}
     environment:
       - SERVICE_PORT=${SERVICE_PORT}
+    networks:
+      - fluentd
+    logging:
+      driver: fluentd
+
+networks:
+  fluentd:
+    external: true
 
 volumes:
   warframe-parsed:
